--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -7,7 +7,7 @@
 
 \section{\IfLanguageName{dutch}{Probleemstelling}{Problem Statement}}
 \label{sec:probleemstelling}
-De promotor en doelgroep van dit onderzoek is delaware. Zij stelden voor om te onderzoeken hoe microservices integration patterns het order-to-cash proces beïnvloeden. Microservices is een opkomende technologie die heeft invloed op de architectuur van een applicatie. Omtrent deze technologie zijn er verschillende manieren, integration patterns, om te implementeren. Het nut van deze bachelorproef is om integration patterns op een order-to-cash proces toe te passen, op een theoretisch vlak. Op die manier kan er een beeld geschetst worden om bij een bestaande architectuur deze nieuwe technologie te gebruiken.
+De promotor en doelgroep van dit onderzoek is delaware. Zij stelden voor om te onderzoeken hoe microservices integration patterns het order-to-cash proces beïnvloeden. Microservices is een opkomende technologie die invloed heeft op de architectuur van een applicatie. Omtrent deze technologie zijn er verschillende manieren, integration patterns, om te implementeren. Het nut van deze bachelorproef is om integration patterns op een order-to-cash proces toe te passen, op een theoretisch vlak. Op die manier kan er een beeld geschetst worden om bij een bestaande architectuur deze nieuwe technologie te gebruiken.
 
 \section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}
 \label{sec:onderzoeksvraag}
