--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -43,18 +43,18 @@
 'Microservice integration patterns op SAP order-to-cash proces' werd voorgesteld door delaware om te onderzoeken hoe microservice integration patterns een invloed kunnen hebben op het order-to-cash proces binnen SAP. 
 
 % TAAK
-Dit onderzoek kent een verdiepende structuur. Als eerst zal er uitleg worden gegeven omtrent microservices, dan komt er een vergelijking tussen de verschillende onderdelen. Enkele voorbeelden hiervan zijn authenticatie en authorisatie. Deze scriptie sluit af met opkomende ideologieën en de bescherming van microservices.
+Dit onderzoek kent een verdiepende structuur. Als eerste zal er uitleg gegeven worden  omtrent microservices, dan komt er een vergelijking tussen de verschillende onderdelen. Enkele voorbeelden hiervan zijn authenticatie en authorisatie. Deze scriptie sluit af met opkomende ideologieën en de bescherming van microservices.
 
 % OBJECT
 In deze thesis is als eerste een uitgebreide literatuurstudie terug te vinden. In deze studie wordt er dieper ingegaan op de technologie van microservices en de verschillende integration patterns daaromtrent. Daarnaast zal er meer uitleg gegeven worden over het order-to-cash proces.
 Na de literatuurstudie wordt een microservice integration pattern toegepast op het order-to-cash proces. Als afsluiter komt de conclusie omtrent deze studie.
 
 % RESULTAAT
-Microservices zorgen voor een geautomatiseerd proces met weinig menselijke interactie, het is een complexe architectuur. De overschakeling naar een microservice architectuur bevat veel onderdelen waar er in eerste instantie niet aan gedacht wordt. Het werd ook duidelijk dat er goed moet worden nagedacht over alle kleine dingen, zoals authenticatie, de manier van bescherming, hoe logging wordt opgevangen...
-De manier op microservices te gaan gebruiken binnen een architectuur kan aan de hand van integration patterns. Er kan een microservice architectuur opgezet worden aan de hand van één integration pattern maar dat is niet aangeraden. Elke integration pattern heeft zijn tekortkomingen. Door meerdere te gaan combineren is de kans op falen kleiner, mits deze goed worden toegepast.
+Microservices zorgen voor een geautomatiseerd proces met weinig menselijke interactie, het is een complexe architectuur. De overschakeling naar een microservice architectuur bevat veel onderdelen waar er in eerste instantie niet aan gedacht wordt. Het wordt ook duidelijk dat er goed moet worden nagedacht over alle kleine dingen, zoals authenticatie, de manier van bescherming, hoe logging wordt opgevangen...
+De manier op microservices te gaan gebruiken binnen een architectuur kan aan de hand van integration patterns. Er kan een microservice architectuur opgezet worden aan de hand van één integration pattern maar dat is niet aan te raden. Elke integration pattern heeft zijn tekortkomingen. Door meerdere te gaan combineren is de kans op falen kleiner, mits deze goed worden toegepast.
 
 % CONCLUSIE
-De overschakeling kan gemakkelijk onderschat worden waardoor zich een belangrijke vraag is: hebben microservices wel een meerwaarde in dit proces? Of de overschakeling moet gemaakt worden, is afhankelijk van wat de noden van de applicatie precies zijn.
+De overschakeling naar een microservice architectuur kan gemakkelijk onderschat worden waardoor zich een belangrijke vraag stelt: hebben microservices wel een meerwaarde in dit proces? Of de overschakeling moet gemaakt worden, is afhankelijk van wat de noden van de applicatie precies zijn.
 
 % PERSPECTIEF
-Er zullen zeker vragen en aanvullingen komen in de toekomst. Dit is een evoluerende technologie en er zullen betere oplossingen komen voor de verschillende onderdelen.
+Er zullen zeker vragen en aanvullingen komen in de toekomst. Dit is een evoluerende technologie en er zullen betere oplossingen komen voor de verschillende moeilijkheden.
